--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ a{
 	color: inherit;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+}
+
+
 .section-title{
 	margin-bottom: 50px;
 	font-size: 48px;
